DataContext y Controller creado.

--- a/ParcialHurtado/RestCountries/Web.config
+++ b/ParcialHurtado/RestCountries/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RestCountries-20200919112521.mdf;Initial Catalog=aspnet-RestCountries-20200919112521;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Server=tcp:srvjoseandresbd.database.windows.net,1433;Initial Catalog=PrimerParcialDB;Persist Security Info=False;User ID=joseandres;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
